app/css/esp-responsive.css
#container-main {
  padding: 5px;
}

.nav > li > a {
  padding: 2px 15px;
}
.fa-download {
  padding-bottom: 0px;
  padding-top: 0px;
}
@media (min-width: 768px) {
  html,
  body {
    background-color: #d3d3d3;
    height: 100%;
  }
}
@media (min-width: 768px) {
  #container-main {
    height: 100%;
  }
}
#row-one {
  margin-left: 0px;
  margin-right: 0px;
}
@media (min-width: 768px) {
  #row-one {
    height: 50%;
  }
}
#row-two {
  margin-left: 0px;
  margin-right: 0px;
  height: 400px;
}
@media (min-width: 768px) {
  #row-two {
    height: 50%;
  }
}
#col-nav {
  padding-right: 15px;
  padding-left: 0px;
  height: 200px;
}
@media (min-width: 768px) {
  #col-nav {
    padding-right: 5px;
    padding-left: 5px;
    padding-top: 2px;
    padding-bottom: 2px;
    height: 100%;
  }
}
#panel-nav {
  margin-bottom: 0px;
  height: 200px;
  overflow: auto;
}
@media (min-width: 768px) {
  #panel-nav {
    height: 100%;
  }
}
/* Styles for the group around the deployment selection button */
#deployment-dropdown-btn-group {
  width: 100%;
  margin-bottom: 5px;
}
/* And for the button itself */
#deployment-dropdown-btn {
  width: 100%;
}
#col-graph {
  padding-left: 0px;
  padding-right: 15px;
  height: 422px;
}
@media (min-width: 768px) {
  #col-graph {
    height: 100%;
    padding-right: 5px;
    padding-top: 2px;
    padding-bottom: 2px;
  }
}
#panel-graph {
  margin-bottom: 0px;
  height: 100%;
}
#panel-body-graph {
  padding: 0px;
  height: 100%;
}
#graph {
  height: 400px;
}
@media (min-width: 768px) {
  #graph {
    height: calc(100% - 22px);
  }
}
#col-detail {
  padding-left: 0px;
  padding-right: 15px;
  height: 400px;
}
@media (min-width: 768px) {
  #col-detail {
    padding: 5px;
    height: 100%;
  }
}
#panel-detail {
  margin-bottom: 0px;
  height: 400px;
}
@media (min-width: 768px) {
  #panel-detail {
    height: 100%;
  }
}
#panel-body-detail {
  padding: 0px;
  height: 100%;
}
@media (min-width: 768px) {
  #panel-body-detail {
    padding: 10px;
  }
}
.nav-tabs {
  border-bottom: 0px;
}
.tabbable {
  height: 400px;
}
@media (min-width: 768px) {
  .tabbable {
    height: 100%;
  }
}
.tab-content {
  height: calc(100% - 42px);
}
.tab-pane {
  height: 100%;
}
.tab-pane div {
  height: 100%;
}
.fixed-header {
  height: 100%;
  margin-bottom: 0px;
  overflow-y: hidden;
}
.fixed-header thead {
  background-color: #d7d7d7;
  display: block;
}
.fixed-header thead tr {
  display: block;
}
.fixed-header tbody {
  display: block;
  overflow-y: scroll;
}
.fixed-header tbody tr {
  display: block;
}
.protocol-details-table {
  font-size: small;
  overflow-y: scroll;
}
@media (min-width: 768px) {
  .protocol-details-table {
    padding-right: 2px;
  }
}
.protocol-table tbody {
  height: calc(100% - 52px);
}
.protocol-table td:nth-child(1),
.protocol-table th:nth-child(1) {
  min-width: 200px;
}
.protocol-table td:nth-child(2),
.protocol-table th:nth-child(2) {
  min-width: 100px;
}
.protocol-table td:nth-child(3),
.protocol-table th:nth-child(3) {
  min-width: 75px;
}
.protocol-table td:nth-child(4),
.protocol-table th:nth-child(4) {
  min-width: 100px;
}
.sample-details-table {
  font-size: small;
  overflow-y: scroll;
}
@media (min-width: 768px) {
  .sample-details-table {
    padding-right: 2px;
  }
}
.sample-table tbody {
  height: calc(100% - 52px);
}
.sample-table td:nth-child(1),
.sample-table th:nth-child(1) {
  min-width: 200px;
}
.sample-table td:nth-child(2),
.sample-table th:nth-child(2) {
  min-width: 200px;
}
.sample-table td:nth-child(3),
.sample-table th:nth-child(3) {
  min-width: 100px;
}
.sample-table td:nth-child(4),
.sample-table th:nth-child(4) {
  min-width: 100px;
}
.sample-table td:nth-child(5),
.sample-table th:nth-child(5) {
  min-width: 100px;
}
.sample-table td:nth-child(6),
.sample-table th:nth-child(6) {
  min-width: 100px;
}
.error-details-table {
  font-size: small;
  overflow-y: scroll;
}
@media (min-width: 768px) {
  .error-details-table {
    padding-right: 2px;
  }
}
.error-table tbody {
  height: calc(100% - 36px);
}
.error-table td:nth-child(1),
.error-table th:nth-child(1) {
  min-width: 100px;
}
.error-table td:nth-child(2),
.error-table th:nth-child(2) {
  min-width: 100px;
}
.error-table td:nth-child(3),
.error-table th:nth-child(3) {
  min-width: 75px;
}
.error-table td:nth-child(4),
.error-table th:nth-child(4) {
  min-width: 100px;
}
.error-table td:nth-child(5),
.error-table th:nth-child(5) {
  min-width: 200px;
}
.image-details-row {
  width: 100%;
}
.image-details-list {
  font-size: small;
  overflow-x: hidden;
  height: 100%;
  padding-right: 0px;
}
.image-table tbody {
  height: calc(100% - 36px);
}
.image-table td:nth-child(1),
.image-table th:nth-child(1) {
  min-width: 120px;
}
.image-table td:nth-child(2),
.image-table th:nth-child(2) {
  min-width: 200px;
}
.image-table td:nth-child(3),
.image-table th:nth-child(3) {
  min-width: 60px;
}
.image-table td:nth-child(4),
.image-table th:nth-child(4) {
  min-width: 75px;
}
.image-details-image {
  padding: 0px;
}
.row-image-details-image-name {
  height: 15px !important;
}
.col-image-details-image-name {
  height: 15px !important;
}
.image-details-image-name {
  text-align: center;
  font-size: 12px;
  height: 15px !important;
}
.row-image-details-image-name {
  margin: 0px;
}
.row-image-details-image-adjust-box {
  margin: 0px;
  height: calc(100% - 15px) !important;
}
.image-details-adjust-box-sliders {
  padding-left: 15px;
  padding-right: 0px;
  height: 70px !important;
}
@media (min-width: 768px) {
  .image-details-adjust-box-sliders {
    height: 100% !important;
  }
}
.ui-slider {
  width: 90%;
  height: 5px !important;
}
@media (min-width: 768px) {
  .ui-slider {
    width: 5px;
    height: calc(50% - 25px) !important;
  }
}
.ui-slider .ui-slider-handle {
  width: 15px;
  height: 15px;
}
.col-image-or-canvas {
  padding-left: 0px;
  padding-right: 5px;
  overflow-y: scroll;
}
#selected-image-canvas {
  width: 100%;
  height: 100%;
}
#selected-image-canvas > img {
  width: 100%;
}
/* PCR related styles */
.pcr-details-row {
  margin: 0px;
  overflow-y: scroll;
}
.pcr-details-selection-list {
  padding: 0px;
  overflow-y: scroll;
  font-size: small;
}
.pcr-details-selection-list > .panel-group > .panel {
  height: auto !important;
}
.pcr-date-list {
  list-style-type: none;
  padding-left: 0px;
  font-style: normal;
}
.pcr-date-list-item-label {
  margin-top: 2px;
  margin-bottom: 2px;
  font-style: normal;
}
#pcr-graph-column {
  height: 100%;
  margin: 0px;
  padding: 5px;
}
#pcr-graph-column > .btn-toolbar {
  height: auto !important;
}
#pcr-details-graph {
  height: calc(100% - 22px) !important;
  margin: 0px;
}
/* Styling for enabling the cloaking functions of AngularJS */
[ng\:cloak],
[ng-cloak],
[data-ng-cloak],
[x-ng-cloak],
.ng-cloak,
.x-ng-cloak {
  display: none;
}

